--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/Logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>TechSpread</title>
-  </head>
+    
+    <title>TechSpread - Learn to Code from Zero</title>
+    <meta name="title" content="TechSpread - Learn to Code from Zero" />
+    <meta name="description" content="Structured programming tutorials for absolute beginners. Learn Java, Web Dev, and CS fundamentals." />
+    
+    </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
