Added simulator and andded google analytics

--- a/index.html
+++ b/index.html
@@ -8,7 +8,15 @@
     <title>TechSpread - Learn to Code from Zero</title>
     <meta name="title" content="TechSpread - Learn to Code from Zero" />
     <meta name="description" content="Structured programming tutorials for absolute beginners. Learn Java, Web Dev, and CS fundamentals." />
-    
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-JHYX2HEYLK"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-JHYX2HEYLK');
+    </script>
     </head>
   <body>
     <div id="root"></div>
